Lesson 4 Assignment - FINAL COMMIT

--- a/Lesson4_Project2/index.htm
+++ b/Lesson4_Project2/index.htm
@@ -5,8 +5,8 @@
       LIS 2360:  Web Application Development
       Lesson 4 - Project 2
 
-      Author: 
-      Date:   
+      Author: Wyatt Dell
+      Date:   9/25/15
 
       Filename: index.htm
    -->
